scan QR & เช็คพิกัด

--- a/package.json
+++ b/package.json
@@ -70,8 +70,11 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.8.5",
+    "react-geocode": "^0.2.1",
+    "react-geolocated": "^3.0.1",
     "react-modal": "3.8",
     "react-onclickoutside": "^6.7.1",
+    "react-qr-scanner": "0.0.8",
     "react-redux": "5.0.7",
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
