--- a/package.json
+++ b/package.json
@@ -70,8 +70,12 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.8.5",
+    "react-facebook-login": "^4.1.1",
+    "react-floating-action-button": "^1.0.5",
+    "react-floating-button-menu": "^2.0.8",
     "react-geocode": "^0.2.1",
     "react-geolocated": "^3.0.1",
+    "react-mfb": "^0.6.0",
     "react-modal": "3.8",
     "react-onclickoutside": "^6.7.1",
     "react-qr-scanner": "0.0.8",
