--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "node-sass": "^4.11.0",
+    "oauthio-web": "^0.6.2",
     "pdfmake": "^0.1.57",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -75,6 +76,7 @@
     "react-floating-button-menu": "^2.0.8",
     "react-geocode": "^0.2.1",
     "react-geolocated": "^3.0.1",
+    "react-liff-hooks": "^0.1.3",
     "react-mfb": "^0.6.0",
     "react-modal": "3.8",
     "react-onclickoutside": "^6.7.1",
