--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "oauthio-web": "^0.6.2",
     "pdfmake": "^0.1.57",
     "prop-types": "^15.7.2",
+    "pusher-js": "^5.0.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.2",
     "react-autosuggest": "^9.4.3",
