--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-select": "^2.0.0-beta.7",
     "react-table": "6.5.3",
     "react-test-renderer": "^16.8.5",
+    "react-tiny-fab": "^3.2.0",
     "react-toastify": "^5.2.1",
     "reactstrap": "^7.1.0",
     "redux": "3.7.2",
