--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "journal_client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
